<resources>
    <string name="app_name">JogoDaForca</string>
    <string name="titulo">JOGO DA FORCA</string>
    <string name="tvApelido">Apelido</string>
    <string name="ptApelido"> </string>
    <string name="avatar">AVATAR</string>
    <string name="jogar">JOGAR</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="palavraForca"></string>
    <string name="timer">TIMER</string>
    <string name="tituloNovaPalavra">NOVA PALAVRA</string>
    <string name="tituloNovaPalavra2">INSERIR</string>
    <string name="novaPalavra"></string>
    <string name="salvar">SALVAR</string>
    <string name="palavra">PALAVRA:</string>
    <string name="erradas">  </string>


</resources>