<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/carter_one"
            android:shadowColor="#A35B5B"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/titulo"
            android:textColor="#D31414"
            android:textSize="34sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/amaranth"
            android:shadowColor="#3B406C"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/tvApelido"
            android:textColor="#292E8E"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/ptApelido"
            android:textColor="#FF292E8E"
            android:textColorHint="#292E8E" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="153dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/carter_one"
            android:shadowColor="#A35B5B"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/avatar"
            android:textColor="#D31414"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibCoala"
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            app:srcCompat="@drawable/coala" />

        <ImageButton
            android:id="@+id/ibFlamingo"
            android:layout_width="173dp"
            android:layout_height="124dp"
            android:layout_marginLeft="17dp"
            app:srcCompat="@drawable/flamingo" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibTouro"
            android:layout_width="211dp"
            android:layout_height="140dp"
            app:srcCompat="@drawable/touro" />

        <ImageButton
            android:id="@+id/ibCachorro"
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            app:srcCompat="@drawable/cachorro" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btJogar"
            android:layout_width="112dp"
            android:layout_height="63dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#D31414"
            android:fontFamily="@font/allerta"
            android:shadowColor="#A35B5B"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/jogar"
            app:cornerRadius="@android:dimen/thumbnail_height" />
    </TableRow>

</LinearLayout>